# opentelemetry-js-contrib

plugins/web/opentelemetry-plugin-document-load/: BUILD.bazel
plugins/web/opentelemetry-plugin-document-load/src/: documentLoad.ts
plugins/web/opentelemetry-plugin-document-load/src/enums/: AttributeNames.ts
plugins/web/opentelemetry-plugin-user-interaction/: BUILD.bazel
plugins/web/opentelemetry-plugin-user-interaction/src/: userInteraction.ts
