package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
  name = "opentelemetry-plugin-document-load",
  module_name = '@opentelemetry-contrib/plugin-document-load',
  module_root = "src/index.d.ts",
  srcs = glob(["src/**/*.ts"]),
  deps = [
    "//third_party/opentelemetry-js:api",
    "//third_party/opentelemetry-js:api-global-shared",
    "//third_party/opentelemetry-js:api-global-platform-browser",
    "//third_party/opentelemetry-js:core-shared",
    "//third_party/opentelemetry-js:core-platform-browser",
    "//third_party/opentelemetry-js:tracing",
    "//third_party/opentelemetry-js:web",
  ]
)
